solution for imbalanced data

--- a/docs/EDA.ipynb
+++ b/docs/EDA.ipynb
@@ -879,6 +879,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solutions\n",
+    "\n",
+    "1. MLSMOTE algo (overfitting)\n",
+    "  * [Medium article](https://medium.com/thecyphy/handling-data-imbalance-in-multi-label-classification-mlsmote-531155416b87)\n",
+    "  * [Kaggle notebook](https://www.kaggle.com/c/lish-moa/discussion/187419) \n",
+    "  * imbalanced-learn does not directly offer algos compatible for multilabel classification (see below)\n",
+    " \n",
+    "  \n",
+    "2. Transform multilabel classification problem into single-label classification, then use imbalanced-learn\n",
+    "    * [label power set transformation](https://www.analyticsvidhya.com/blog/2017/08/introduction-to-multi-label-classification/)\n",
+    "    * [Using imbalanced-learn and skmultilearn](https://github.com/scikit-learn-contrib/imbalanced-learn/issues/340#issuecomment-343114570)\n",
+    "    \n",
+    "Easiest approach is to try 1) and see if overfitting with MLSMOTE works. If not, try 2) and use anothe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -902,7 +921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
