--- a/docs/dataloader.ipynb
+++ b/docs/dataloader.ipynb
@@ -1179,7 +1179,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2511,7 +2511,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3862,10 +3862,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Assessment\n",
+    "\n",
+    "Right now I'm just oversampling by 1000 samples. (23,000 -> 24,000 data points) The median label counts jumps from 38.5 -> ~70.\n",
+    "\n",
+    "This seems to improve data imbalance between the labels themselves, however it does not significantly affect overall labeled/non-labeled data imbalance (i.e., # zero-label samples vs. # nonzero-label samples)\n",
+    "\n",
     "### Improvements\n",
     "\n",
-    "* Can copy more visualizations from "
+    "* Can copy more visualizations from [this notebook](https://www.kaggle.com/isaienkov/mechanisms-of-action-moa-prediction-eda) (section 5)\n",
+    "* Should we oversample by more than 1000 data points?\n",
+    "* Is there anything we can (or should) do to assess overal labeled/non-labeled data imbalance?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
