--- a/Skeleton.ipynb
+++ b/Skeleton.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "source material: https://www.kaggle.com/nicohrubec/pytorch-multilabel-neural-network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
