--- a/docs/dataloader.ipynb
+++ b/docs/dataloader.ipynb
@@ -118,7 +118,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0620</td>\n",
@@ -142,7 +142,7 @@
        "      <td>0.4176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0743</td>\n",
@@ -166,7 +166,7 @@
        "      <td>0.7371</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0.6280</td>\n",
@@ -190,7 +190,7 @@
        "      <td>0.6931</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>-0.5138</td>\n",
@@ -214,7 +214,7 @@
        "      <td>-0.8154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.3254</td>\n",
@@ -327,31 +327,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -375,7 +351,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -399,7 +375,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -423,7 +399,31 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -640,197 +640,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cp_time</th>\n",
-       "      <th>cp_dose</th>\n",
-       "      <th>g-0</th>\n",
-       "      <th>g-1</th>\n",
-       "      <th>g-2</th>\n",
-       "      <th>g-3</th>\n",
-       "      <th>g-4</th>\n",
-       "      <th>g-5</th>\n",
-       "      <th>g-6</th>\n",
-       "      <th>g-7</th>\n",
-       "      <th>...</th>\n",
-       "      <th>c-90</th>\n",
-       "      <th>c-91</th>\n",
-       "      <th>c-92</th>\n",
-       "      <th>c-93</th>\n",
-       "      <th>c-94</th>\n",
-       "      <th>c-95</th>\n",
-       "      <th>c-96</th>\n",
-       "      <th>c-97</th>\n",
-       "      <th>c-98</th>\n",
-       "      <th>c-99</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0.366839</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-1.704816</td>\n",
-       "      <td>-1.093926</td>\n",
-       "      <td>-0.696651</td>\n",
-       "      <td>-0.424616</td>\n",
-       "      <td>-0.284015</td>\n",
-       "      <td>-2.310300</td>\n",
-       "      <td>0.506620</td>\n",
-       "      <td>0.302270</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.366222</td>\n",
-       "      <td>-1.107489</td>\n",
-       "      <td>0.434517</td>\n",
-       "      <td>-0.733992</td>\n",
-       "      <td>-1.059541</td>\n",
-       "      <td>0.328142</td>\n",
-       "      <td>-0.653849</td>\n",
-       "      <td>0.823560</td>\n",
-       "      <td>1.032591</td>\n",
-       "      <td>-0.919284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-0.978560</td>\n",
-       "      <td>-1.075344</td>\n",
-       "      <td>0.466900</td>\n",
-       "      <td>1.011407</td>\n",
-       "      <td>1.132933</td>\n",
-       "      <td>0.338429</td>\n",
-       "      <td>0.372976</td>\n",
-       "      <td>0.002358</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.255121</td>\n",
-       "      <td>1.437764</td>\n",
-       "      <td>-0.817002</td>\n",
-       "      <td>-0.796204</td>\n",
-       "      <td>0.540100</td>\n",
-       "      <td>-1.555952</td>\n",
-       "      <td>2.177273</td>\n",
-       "      <td>-1.735228</td>\n",
-       "      <td>1.680305</td>\n",
-       "      <td>0.999300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>3.989811</td>\n",
-       "      <td>1.989811</td>\n",
-       "      <td>1.272608</td>\n",
-       "      <td>-0.455935</td>\n",
-       "      <td>0.979697</td>\n",
-       "      <td>-1.141106</td>\n",
-       "      <td>0.240859</td>\n",
-       "      <td>-0.437268</td>\n",
-       "      <td>-0.210582</td>\n",
-       "      <td>0.349155</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.080053</td>\n",
-       "      <td>0.911120</td>\n",
-       "      <td>0.619721</td>\n",
-       "      <td>1.404975</td>\n",
-       "      <td>0.764687</td>\n",
-       "      <td>0.280139</td>\n",
-       "      <td>0.347242</td>\n",
-       "      <td>-1.342165</td>\n",
-       "      <td>0.264531</td>\n",
-       "      <td>2.085888</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.171745</td>\n",
-       "      <td>-0.523033</td>\n",
-       "      <td>-0.407087</td>\n",
-       "      <td>0.572206</td>\n",
-       "      <td>-0.266461</td>\n",
-       "      <td>-0.800963</td>\n",
-       "      <td>1.911208</td>\n",
-       "      <td>0.165648</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.114707</td>\n",
-       "      <td>0.218923</td>\n",
-       "      <td>-0.835648</td>\n",
-       "      <td>0.327481</td>\n",
-       "      <td>1.351299</td>\n",
-       "      <td>-0.289531</td>\n",
-       "      <td>0.201945</td>\n",
-       "      <td>0.341416</td>\n",
-       "      <td>0.782918</td>\n",
-       "      <td>-3.740985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4.448344</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.039174</td>\n",
-       "      <td>-0.482409</td>\n",
-       "      <td>-3.695879</td>\n",
-       "      <td>1.717991</td>\n",
-       "      <td>2.707697</td>\n",
-       "      <td>-1.082737</td>\n",
-       "      <td>0.853229</td>\n",
-       "      <td>1.579973</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.168667</td>\n",
-       "      <td>1.240230</td>\n",
-       "      <td>0.111884</td>\n",
-       "      <td>0.144109</td>\n",
-       "      <td>0.481272</td>\n",
-       "      <td>0.322042</td>\n",
-       "      <td>-0.212487</td>\n",
-       "      <td>0.528673</td>\n",
-       "      <td>0.233955</td>\n",
-       "      <td>-1.478190</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 874 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    cp_time   cp_dose       g-0       g-1       g-2       g-3       g-4  \\\n",
-       "0  0.366839  1.000000 -1.704816 -1.093926 -0.696651 -0.424616 -0.284015   \n",
-       "1  3.000000  0.000000 -0.978560 -1.075344  0.466900  1.011407  1.132933   \n",
-       "2  3.989811  1.989811  1.272608 -0.455935  0.979697 -1.141106  0.240859   \n",
-       "3  2.000000  1.000000  0.171745 -0.523033 -0.407087  0.572206 -0.266461   \n",
-       "4  4.448344  1.000000  0.039174 -0.482409 -3.695879  1.717991  2.707697   \n",
-       "\n",
-       "        g-5       g-6       g-7  ...      c-90      c-91      c-92      c-93  \\\n",
-       "0 -2.310300  0.506620  0.302270  ... -0.366222 -1.107489  0.434517 -0.733992   \n",
-       "1  0.338429  0.372976  0.002358  ...  1.255121  1.437764 -0.817002 -0.796204   \n",
-       "2 -0.437268 -0.210582  0.349155  ...  2.080053  0.911120  0.619721  1.404975   \n",
-       "3 -0.800963  1.911208  0.165648  ... -1.114707  0.218923 -0.835648  0.327481   \n",
-       "4 -1.082737  0.853229  1.579973  ...  0.168667  1.240230  0.111884  0.144109   \n",
-       "\n",
-       "       c-94      c-95      c-96      c-97      c-98      c-99  \n",
-       "0 -1.059541  0.328142 -0.653849  0.823560  1.032591 -0.919284  \n",
-       "1  0.540100 -1.555952  2.177273 -1.735228  1.680305  0.999300  \n",
-       "2  0.764687  0.280139  0.347242 -1.342165  0.264531  2.085888  \n",
-       "3  1.351299 -0.289531  0.201945  0.341416  0.782918 -3.740985  \n",
-       "4  0.481272  0.322042 -0.212487  0.528673  0.233955 -1.478190  \n",
-       "\n",
-       "[5 rows x 874 columns]"
+       "(1000, 874)"
       ]
      },
      "execution_count": 11,
@@ -839,7 +650,7 @@
     }
    ],
    "source": [
-    "X_res.head()"
+    "X_res.shape"
    ]
   },
   {
@@ -1178,9 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2510,9 +2319,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3899,9 +3706,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
