log-loss calculation update

--- a/01 - KFold Iteration.ipynb
+++ b/01 - KFold Iteration.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,14 +988,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mock log-loss score\n",
-    "\n",
-    "TODO why are these numbers so high? Not representative of our score on Kaggle."
+    "## Mock log-loss score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,60 +1004,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "log-loss score:  0.7421208955315076\n"
+      "log-loss score:  0.005096002899379319\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using pytorch\n",
+    "# m = nn.Sigmoid() <-- do NOT need to transform predictions by sigmoid function.\n",
+    "loss_fn = nn.BCELoss()\n",
+    "\n",
+    "y_pred = torch.from_numpy(mock_preds.astype(float))\n",
+    "y_true = torch.from_numpy(Y_original.astype(float))\n",
+    "\n",
+    "score = loss_fn(y_pred, y_true)\n",
+    "print(\"log-loss score: \", score.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.005080254937959896\n"
      ]
     }
    ],
    "source": [
     "# using scikit-learn\n",
     "from sklearn.metrics import log_loss\n",
-    "score = log_loss(Y_original, mock_preds)\n",
+    "\n",
+    "target_cols = train_targets.columns[1:]\n",
+    "\n",
+    "y_true = Y_original.astype(np.float64)\n",
+    "y_pred = mock_preds.astype(np.float64)\n",
+    "\n",
+    "score = 0\n",
+    "for i in range(len(target_cols)):\n",
+    "    score_ = log_loss(y_true[:, i], y_pred[:, i])\n",
+    "    score += score_ / train_targets.shape[1]\n",
+    "    \n",
     "print(\"log-loss score: \", score)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "log-loss score:  0.6930790064934725\n"
-     ]
-    }
-   ],
-   "source": [
-    "# using pytorch\n",
-    "m = nn.Sigmoid() # <-- should I transform predictions by sigmoid function?\n",
-    "loss_fn = nn.BCELoss()\n",
-    "mock_preds_torch = torch.from_numpy(mock_preds.astype(float))\n",
-    "Y_original_torch = torch.from_numpy(Y_original.astype(float))\n",
-    "score = loss_fn(m(mock_preds_torch), Y_original_torch)\n",
-    "print(\"log-loss score: \", score.item())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
