Add ROC AUC and confusion matrix

--- a/01 - KFold Iteration.ipynb
+++ b/01 - KFold Iteration.ipynb
@@ -1066,7 +1066,7 @@
    "source": [
     "### 2) Mock ROC AUC score\n",
     "\n",
-    "For multilabel classification, scikit-learn must \"binarize\" the output - two strategies are called micro-averaging and macro-averaging. This allows all labels to be represented in one curve. ([Reference](https://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html)) ([math explanation](https://cran.r-project.org/web/packages/yardstick/vignettes/multiclass.html))\n",
+    "For multilabel classification, scikit-learn makes an aggregate ROC curve from the individual label (one vs. all) ROC curves through a process called \"micro-averaging.\" Alternative strategy is called macro-averaging. ([Reference](https://scikit-learn.org/stable/auto_examples/model_selection/plot_roc.html)) ([math explanation](https://cran.r-project.org/web/packages/yardstick/vignettes/multiclass.html))\n",
     "\n",
     "For multilabel classification, scikit-learn calculates AUC for each individual label, then takes an average. This represents AUC score."
    ]
@@ -1118,11 +1118,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3) Mock confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4504006     438]\n",
+      " [   6496   10348]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import multilabel_confusion_matrix\n",
+    "\n",
+    "decision_boundary = 0.5\n",
+    "\n",
+    "confusion_matrices = multilabel_confusion_matrix(y_true, (y_pred > decision_boundary))\n",
+    "\n",
+    "tp = 0\n",
+    "fp = 0\n",
+    "fn = 0\n",
+    "tn = 0\n",
+    "confusion_matrices[0][0][1]\n",
+    "for m in confusion_matrices:\n",
+    "    tn += m[0][0]\n",
+    "    fp += m[0][1]\n",
+    "    fn += m[1][0]\n",
+    "    tp += m[1][1]\n",
+    "\n",
+    "agg_confusion_matrix = np.array([[tn, fp], \n",
+    "                                 [fn, tp]])\n",
+    "print(agg_confusion_matrix)"
+   ]
   }
  ],
  "metadata": {
