--- a/01 - KFold Iteration.ipynb
+++ b/01 - KFold Iteration.ipynb
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1142,24 +1142,22 @@
     "from sklearn.metrics import multilabel_confusion_matrix\n",
     "\n",
     "decision_boundary = 0.5\n",
-    "\n",
     "confusion_matrices = multilabel_confusion_matrix(y_true, (y_pred > decision_boundary))\n",
     "\n",
-    "tp = 0\n",
-    "fp = 0\n",
-    "fn = 0\n",
-    "tn = 0\n",
-    "confusion_matrices[0][0][1]\n",
+    "agg_confusion_matrix = np.array([[0, 0],  # [tn, fp]\n",
+    "                                 [0, 0]])  # [fn, tp]\n",
     "for m in confusion_matrices:\n",
-    "    tn += m[0][0]\n",
-    "    fp += m[0][1]\n",
-    "    fn += m[1][0]\n",
-    "    tp += m[1][1]\n",
+    "    agg_confusion_matrix += m\n",
     "\n",
-    "agg_confusion_matrix = np.array([[tn, fp], \n",
-    "                                 [fn, tp]])\n",
     "print(agg_confusion_matrix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
