add auto-pytorch implementation

--- a/02 - Auto-PyTorch.ipynb
+++ b/02 - Auto-PyTorch.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/sklearn/utils/deprecation.py:143: FutureWarning: The sklearn.ensemble.forest module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.ensemble. Anything that cannot be imported from sklearn.ensemble is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,14 +240,14 @@
        " 'predict_model': None,\n",
        " 'early_stopping_patience': inf,\n",
        " 'early_stopping_reset_parameters': False,\n",
-       " 'random_seed': 3425318595,\n",
+       " 'random_seed': 2972785857,\n",
        " 'min_budget': 120,\n",
        " 'max_budget': 6000,\n",
        " 'max_runtime': 24000,\n",
        " 'num_iterations': inf}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,43 +259,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/sklearn/preprocessing/_data.py:2995: RuntimeWarning: divide by zero encountered in log\n",
-      "  loglike = -n_samples / 2 * np.log(x_trans.var())\n",
-      "/opt/conda/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:603: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
-      "  warnings.warn(EPOCH_DEPRECATION_WARNING, UserWarning)\n",
       "/opt/conda/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:603: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
       "  warnings.warn(EPOCH_DEPRECATION_WARNING, UserWarning)\n",
       "/opt/conda/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:484: UserWarning: To get the last learning rate computed by the scheduler, please use `get_last_lr()`.\n",
       "  \"please use `get_last_lr()`.\", UserWarning)\n",
       "/opt/conda/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:143: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
       "  warnings.warn(EPOCH_DEPRECATION_WARNING, UserWarning)\n",
-      "/opt/conda/lib/python3.7/site-packages/sklearn/preprocessing/_data.py:2995: RuntimeWarning: divide by zero encountered in log\n",
-      "  loglike = -n_samples / 2 * np.log(x_trans.var())\n",
+      "/opt/conda/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:603: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
+      "  warnings.warn(EPOCH_DEPRECATION_WARNING, UserWarning)\n",
+      "/opt/conda/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:603: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
+      "  warnings.warn(EPOCH_DEPRECATION_WARNING, UserWarning)\n",
       "/opt/conda/lib/python3.7/site-packages/torch/optim/lr_scheduler.py:603: UserWarning: The epoch parameter in `scheduler.step()` was not necessary and is being deprecated where possible. Please use `scheduler.step()` to step the scheduler. During the deprecation, if epoch is different from None, the closed form is used instead of the new chainable form, where available. Please open an issue if you are unable to replicate your use case: https://github.com/pytorch/pytorch/issues/new/choose.\n",
       "  warnings.warn(EPOCH_DEPRECATION_WARNING, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fit executed in 654 seconds\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
+    "start = time.time()\n",
     "results_fit = autonet.fit(X_train=X,\n",
     "                          Y_train=Y,\n",
     "                          validation_split=0.3,\n",
-    "                          max_runtime=300,\n",
-    "                          min_budget=60,\n",
-    "                          max_budget=100,\n",
-    "                          refit=True)"
+    "                          normalization_strategies = ['none'],\n",
+    "                          max_runtime=600,\n",
+    "                          min_budget=100,\n",
+    "                          max_budget=300,\n",
+    "                          refit=True)\n",
+    "end = time.time()\n",
+    "print(\"fit executed in %d seconds\" % int(end - start))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,26 +315,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score:  0.02341899034080554\n"
+      "Model accuracy score:  0.0008201202843083652\n"
      ]
     }
    ],
    "source": [
     "score = autonet.score(X_test=X_original, Y_test=Y_original)\n",
-    "print(\"Model accuracy score: \", score)\n",
-    "# TODO: what does this score represent?"
+    "print(\"Model accuracy score: \", score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,28 +342,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.0000000e+00, 5.2453688e-36, 0.0000000e+00, ..., 0.0000000e+00,\n",
-       "        0.0000000e+00, 0.0000000e+00],\n",
-       "       [0.0000000e+00, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
-       "        0.0000000e+00, 0.0000000e+00],\n",
-       "       [1.1269496e-03, 5.0480483e-04, 9.7554994e-13, ..., 3.5363615e-10,\n",
-       "        8.7857707e-12, 8.7715181e-13],\n",
+       "array([[0.47449917, 0.47412273, 0.47258985, ..., 0.47503898, 0.47242862,\n",
+       "        0.4731424 ],\n",
+       "       [0.46212175, 0.46176288, 0.46127033, ..., 0.46214086, 0.46130815,\n",
+       "        0.46125385],\n",
+       "       [0.46537584, 0.46521583, 0.46429715, ..., 0.46592334, 0.46413037,\n",
+       "        0.4647018 ],\n",
        "       ...,\n",
-       "       [1.1358051e-16, 8.5846139e-14, 1.2323135e-14, ..., 5.0025088e-15,\n",
-       "        4.7446711e-15, 1.1774521e-15],\n",
-       "       [3.7844887e-13, 9.3131940e-11, 1.3905371e-09, ..., 2.5447855e-10,\n",
-       "        2.3934350e-09, 1.2638107e-10],\n",
-       "       [1.5752066e-25, 9.4785180e-21, 5.2640633e-24, ..., 4.6327245e-24,\n",
-       "        2.2442925e-25, 8.3291474e-25]], dtype=float32)"
+       "       [0.46040127, 0.4602182 , 0.4598855 , ..., 0.4605803 , 0.45990843,\n",
+       "        0.46006277],\n",
+       "       [0.46608117, 0.46548915, 0.4652344 , ..., 0.46560448, 0.46527708,\n",
+       "        0.46552852],\n",
+       "       [0.46373478, 0.46328485, 0.46298856, ..., 0.46347734, 0.4630165 ,\n",
+       "        0.4631768 ]], dtype=float32)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,14 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "targets = [col for col in train_targets.columns]\n",
     "sample_submission[targets] = preds\n",
     "sample_submission.loc[test_features['cp_type']=='ctl_vehicle', targets] = 0\n",
-    "sample_submission.to_csv('submission.csv', index=False)"
+    "sample_submission.to_csv('autonet_v1.csv', index=False)"
    ]
   },
   {
