--- a/02 - Hyperopt.ipynb
+++ b/02 - Hyperopt.ipynb
@@ -1679,172 +1679,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trials.results[0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_losses = trials.results[-1]['train_losses']\n",
-    "val_losses = trials.results[-1]['val_losses']\n",
-    "\n",
-    "plt.plot(train_losses, label='train loss')\n",
-    "plt.plot(val_losses, label='validation loss')\n",
-    "plt.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "final_model = trials.results[-1]['model_result']\n",
-    "batch_size = best['batch_size']\n",
-    "device = space['device']\n",
-    "test_dataset = MoaDataset(X_test, None, mode='eval')\n",
-    "test_loader = torch.utils.data.DataLoader(dataset=test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "---\n",
     "\n",
-    "preds = predict(final_model, device, test_loader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "targets = [col for col in train_targets.columns]\n",
-    "sample_submission[targets] = preds\n",
-    "sample_submission.loc[test_features['cp_type']=='ctl_vehicle', targets] = 0\n",
-    "sample_submission.to_csv('submission.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Model evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset = MoaDataset(X_original, None, mode='eval')\n",
-    "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=False)\n",
-    "mock_preds = predict(model, device, train_loader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss_fn = nn.BCELoss()\n",
+    "#### **NOTE:** GPU ran out of memory after training the 57th model! After each trial's loss is calculated, we need to get model out of GPU memory. See my workaround in \n",
     "\n",
-    "y_pred = torch.from_numpy(mock_preds.astype(float))\n",
-    "y_true = torch.from_numpy(Y_original.astype(float))\n",
-    "\n",
-    "score = loss_fn(y_pred, y_true)\n",
-    "print(\"log-loss score: \", score.item())"
+    "---\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import roc_curve, auc, roc_auc_score\n",
-    "\n",
-    "# compute ROC AUC curve and AUC score using micro-averaging\n",
-    "fpr, tpr, _ = roc_curve(y_true.ravel(), y_pred.ravel())\n",
-    "roc_auc = auc(fpr, tpr)\n",
-    "\n",
-    "plt.figure()\n",
-    "plt.plot(fpr, tpr, color='darkorange',\n",
-    "         lw=2, label='ROC curve (area = %0.4f)' % roc_auc)\n",
-    "plt.xlim([0.0, 1.0])\n",
-    "plt.ylim([0.0, 1.05])\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.title('Aggregate ROC curve (micro-averaging)')\n",
-    "plt.legend(loc=\"lower right\")\n",
-    "plt.show()\n",
-    "\n",
-    "print(\"ROC AUC score: \", roc_auc_score(y_true, y_pred, average='micro'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import multilabel_confusion_matrix\n",
-    "\n",
-    "decision_boundary = 0.5\n",
-    "confusion_matrices = multilabel_confusion_matrix(y_true, (y_pred > decision_boundary))\n",
-    "\n",
-    "agg_confusion_matrix = np.array([[0, 0],  # [tn, fp]\n",
-    "                                 [0, 0]])  # [fn, tp]\n",
-    "for m in confusion_matrices:\n",
-    "    agg_confusion_matrix += m\n",
-    "\n",
-    "print(agg_confusion_matrix)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Export model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# use torch.save() to export model, I think I also have to use pickle?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
