--- a/02 - Hyperopt.ipynb
+++ b/02 - Hyperopt.ipynb
@@ -1684,7 +1684,7 @@
    "source": [
     "---\n",
     "\n",
-    "#### **NOTE:** GPU ran out of memory after training the 57th model! After each trial's loss is calculated, we need to get model out of GPU memory. See my workaround in \n",
+    "#### **NOTE:** GPU ran out of memory after training the 57th model! After each trial's loss is calculated, we need to get model out of GPU memory. See my workaround in this [updated notebook](https://github.com/trainML/moa-prediction/blob/master/03%20-%20Hyperopt%20%2B%20mem%20management.ipynb).\n",
     "\n",
     "---\n"
    ]
